k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-service
  namespace: todo-list
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "todo.julienp-kubernetes.click"
    external-dns.alpha.kubernetes.io/ttl: "300"
    externaldns.alpha.kubernetes.io/external: "true"
spec:
  type: ClusterIP
  selector:
    app: todo-list
  ports:
    - port: 80
      targetPort: 5000
